src/objects/Disaster_Recovery__c.object
<CustomObject>
    <description>This object is used as a staging table to generate disaster recovery records.</description>
    <fields>
        <fullName>AccountLocationID__c</fullName>
        <formula>IF(NOT(ISBLANK(Physical_Asset__c)), Physical_Asset__r.AccountLocation__c,  AccountLocation__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Location ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountLocation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This indicates the Account Location for which the case was logged.</description>
        <label>Account Location</label>
        <referenceTo>Apttus_Config2__AccountLocation__c</referenceTo>
        <relationshipLabel>Disaster Recovery</relationshipLabel>
        <relationshipName>Disaster_Recovery</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ActualEndDate__c</fullName>
        <label>Actual End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ActualStartDate__c</fullName>
        <description>This indicates the actual date the engineer start or should start the service job.</description>
        <label>Actual Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Already_Processed__c</fullName>
        <formula>(TS_Case_Reference__c != null &amp;&amp; TS_Work_Order_Reference__c != null &amp;&amp; TS_Work_Order_Line_Item_Reference__c != null)
||
(TS_Case_Reference__c != null &amp;&amp; TS_Work_Order_Reference__c == null &amp;&amp; TS_Work_Order_Line_Item_Reference__c == null &amp;&amp; !WorkOrderRequired__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Already Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CaseStatus__c</fullName>
        <formula>IF(WorkOrderRequired__c = TRUE, &quot;In Progress&quot;, &quot;Closed&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Click__c</fullName>
        <formula>IF(OR( 
ISPICKVAL( SalesOrganization__c, &apos;SAP_6864&apos;), 
ISPICKVAL( SalesOrganization__c, &apos;SAP_0333&apos;), 
ISPICKVAL( SalesOrganization__c, &apos;SAP_0975&apos;), 
ISPICKVAL( SalesOrganization__c, &apos;SAP_0111&apos;), 
ISPICKVAL( SalesOrganization__c, &apos;SAP_6712&apos;)), 
TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Click</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CoffeeIsRunning__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This indicates whether the customer indicated whether the customer was running during call intake.</description>
        <label>Coffee Is Running</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CompletionCode__c</fullName>
        <description>Indicates how the Case was solved.</description>
        <label>Completion Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>100</fullName>
                    <label>100 - Completed, At Location</label>
                </value>
                <value>
                    <fullName>110</fullName>
                    <label>110 - Not Completed, No Parts</label>
                </value>
                <value>
                    <fullName>120</fullName>
                    <label>120 - Completed, No Problem Found</label>
                </value>
                <value>
                    <fullName>130</fullName>
                    <label>130 - Completed, Wrong Treatment Cust.</label>
                </value>
                <value>
                    <fullName>140</fullName>
                    <label>140 – Completed, Fixed By Phone</label>
                </value>
                <value>
                    <fullName>150</fullName>
                    <label>150 - Not Completed, Too Expensive</label>
                </value>
                <value>
                    <fullName>160</fullName>
                    <label>160 - Completed, Customer Request</label>
                </value>
                <value>
                    <fullName>170</fullName>
                    <label>170 - Not Completed, Int. Spec. Req.</label>
                </value>
                <value>
                    <fullName>180</fullName>
                    <label>180 - Not Completed, Ext. Spec. Req.</label>
                </value>
                <value>
                    <fullName>190</fullName>
                    <label>190 - Not Completed, Cust. Not Present</label>
                </value>
                <value>
                    <fullName>200</fullName>
                    <label>200 - Install Not Completed, Fault JDEP</label>
                </value>
                <value>
                    <fullName>210</fullName>
                    <label>210 - Install Not Completed, Due Cust.</label>
                </value>
                <value>
                    <fullName>220</fullName>
                    <label>220 - Install completed with flaw</label>
                </value>
                <value>
                    <fullName>230</fullName>
                    <label>230 - Completed, Wrong Treatment Operator</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This indicates the contact for who the case needs to be registered for.</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Disaster Recovery</relationshipLabel>
        <relationshipName>Disaster_Recovery</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ContainsDescription__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This indicates that the record has a description.</description>
        <label>Contains Description</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ContainsExternalSolution__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox indicates whether an external solution is provided.</description>
        <label>Contains External Solution</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CostIndicationasDiscussed__c</fullName>
        <description>This indicates the cost estimate which was discussed during the intake of the case.</description>
        <label>Cost Indication as Discussed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Customer_Case_ID__c</fullName>
        <label>Customer Case ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DefectCode__c</fullName>
        <description>Indicates the Standardized codes for categorising a Defect on the Physical Asset.</description>
        <label>Defect Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>T01</fullName>
                    <label>T01 – Worn Out</label>
                </value>
                <value>
                    <fullName>T02</fullName>
                    <label>T02 – Lime Scale</label>
                </value>
                <value>
                    <fullName>T03</fullName>
                    <label>T03 – Blocked</label>
                </value>
                <value>
                    <fullName>T04</fullName>
                    <label>T04 – Cut / Broken</label>
                </value>
                <value>
                    <fullName>T05</fullName>
                    <label>T05 – Kinked / Bent / Squeezed</label>
                </value>
                <value>
                    <fullName>T06</fullName>
                    <label>T06 – Corroded</label>
                </value>
                <value>
                    <fullName>T07</fullName>
                    <label>T07 – Sealing</label>
                </value>
                <value>
                    <fullName>T08</fullName>
                    <label>T08 – Wrong Mounting</label>
                </value>
                <value>
                    <fullName>T09</fullName>
                    <label>T09 – Wrong Treatment</label>
                </value>
                <value>
                    <fullName>T10</fullName>
                    <label>T10 – Vandalism / Theft</label>
                </value>
                <value>
                    <fullName>T11</fullName>
                    <label>T11 – Wrong Adjustment</label>
                </value>
                <value>
                    <fullName>T12</fullName>
                    <label>T12 – Electrical</label>
                </value>
                <value>
                    <fullName>T13</fullName>
                    <label>T13 – Bug / Old version sw</label>
                </value>
                <value>
                    <fullName>T14</fullName>
                    <label>T14 – Water / Mains Supply</label>
                </value>
                <value>
                    <fullName>T15</fullName>
                    <label>T15 – Connection / Network</label>
                </value>
                <value>
                    <fullName>T16</fullName>
                    <label>T16 – Quality Ingredients</label>
                </value>
                <value>
                    <fullName>T17</fullName>
                    <label>T17 – Customer Request</label>
                </value>
                <value>
                    <fullName>T18</fullName>
                    <label>T18 – Not Applicable</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>This indicates the description.</description>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EarliestAppointmentTime__c</fullName>
        <description>This indicates the time range specific to the customer needs.</description>
        <label>Earliest Appointment Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ExecutingEngineer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This indicates the engineer who was planned to execute the service job.</description>
        <label>Executing Engineer</label>
        <referenceTo>Resource__c</referenceTo>
        <relationshipLabel>Disaster Recovery</relationshipLabel>
        <relationshipName>Disaster_Recovery</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ExternalSolution__c</fullName>
        <description>Shows the solution as communicated to the customer.</description>
        <label>External Solution</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FaultCode__c</fullName>
        <description>Indicates what has been worked on for this Case.</description>
        <label>Fault Code</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>FaultLocationCategory__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>D01</fullName>
                    <label>D01 - Housing</label>
                </value>
                <value>
                    <fullName>D02</fullName>
                    <label>D02 - Door</label>
                </value>
                <value>
                    <fullName>D03</fullName>
                    <label>D03 - Door Hinge</label>
                </value>
                <value>
                    <fullName>D04</fullName>
                    <label>D04 - Door Lock</label>
                </value>
                <value>
                    <fullName>D05</fullName>
                    <label>D05 - Door Switch / Sensor</label>
                </value>
                <value>
                    <fullName>D06</fullName>
                    <label>D06 - Cooling Compartment</label>
                </value>
                <value>
                    <fullName>D07</fullName>
                    <label>D07 - Drip Tray / Drip Plate</label>
                </value>
                <value>
                    <fullName>D08</fullName>
                    <label>D08 - Wastebucket</label>
                </value>
                <value>
                    <fullName>D09</fullName>
                    <label>D09 - Selection Buttons</label>
                </value>
                <value>
                    <fullName>D10</fullName>
                    <label>D10 - Cup Sensor</label>
                </value>
                <value>
                    <fullName>D11</fullName>
                    <label>D11 - Cup Dispensing</label>
                </value>
                <value>
                    <fullName>D12</fullName>
                    <label>D12 - Cup Magazine</label>
                </value>
                <value>
                    <fullName>D13</fullName>
                    <label>D13 - Branch Pipe</label>
                </value>
                <value>
                    <fullName>D14</fullName>
                    <label>D14 - Drum</label>
                </value>
                <value>
                    <fullName>D15</fullName>
                    <label>D15 - Motor (Drum)</label>
                </value>
                <value>
                    <fullName>D16</fullName>
                    <label>D16 - Helix</label>
                </value>
                <value>
                    <fullName>D17</fullName>
                    <label>D17 - Motor (Helix)</label>
                </value>
                <value>
                    <fullName>D18</fullName>
                    <label>D18 - Shafts</label>
                </value>
                <value>
                    <fullName>D19</fullName>
                    <label>D19 - Stirrer Dispenser</label>
                </value>
                <value>
                    <fullName>D20</fullName>
                    <label>D20 - Cup Heater</label>
                </value>
                <value>
                    <fullName>D21</fullName>
                    <label>D21 - Basestand / Cabinet</label>
                </value>
                <value>
                    <fullName>D22</fullName>
                    <label>D22 - Cup Dispenser Basestand</label>
                </value>
                <value>
                    <fullName>D23</fullName>
                    <label>D23 - Cooling Filter</label>
                </value>
                <value>
                    <fullName>D24</fullName>
                    <label>D24 - Condensor / Evaporator</label>
                </value>
                <value>
                    <fullName>E01</fullName>
                    <label>E01 - Fuse / Fuseholder</label>
                </value>
                <value>
                    <fullName>E02</fullName>
                    <label>E02 - Mains / Transformer</label>
                </value>
                <value>
                    <fullName>E03</fullName>
                    <label>E03 - Main Switch</label>
                </value>
                <value>
                    <fullName>E04</fullName>
                    <label>E04 - Power Supply PCB</label>
                </value>
                <value>
                    <fullName>E05</fullName>
                    <label>E05 - Fan Electronics</label>
                </value>
                <value>
                    <fullName>E06</fullName>
                    <label>E06 - Fan Cooling</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FaultConfiguration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This indicates the fault configuration for which the case was logged.</description>
        <label>Fault Configuration</label>
        <referenceTo>PhysicalAsset__c</referenceTo>
        <relationshipLabel>Disaster Recovery (Fault Configuration)</relationshipLabel>
        <relationshipName>Disaster_Recovery1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FaultLocationCategory__c</fullName>
        <label>Fault Location Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>D</fullName>
                    <label>Door / Housing</label>
                </value>
                <value>
                    <fullName>E</fullName>
                    <label>Electronics</label>
                </value>
                <value>
                    <fullName>W</fullName>
                    <label>Water</label>
                </value>
                <value>
                    <fullName>B</fullName>
                    <label>Brewing</label>
                </value>
                <value>
                    <fullName>I</fullName>
                    <label>Ingredient / Dosing</label>
                </value>
                <value>
                    <fullName>P</fullName>
                    <label>Payment / Telemetry</label>
                </value>
                <value>
                    <fullName>N</fullName>
                    <label>Non Machine</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>InternalSolution__c</fullName>
        <description>Solution as indicated but only for internal use.</description>
        <label>Internal Solution</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LatestAppointmentTime__c</fullName>
        <label>Latest Appointment Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MissingCaseCompletionDetails__c</fullName>
        <formula>WorkOrderRequired__c = FALSE &amp;&amp;
OR(
ISBLANK(TEXT(CompletionCode__c)),
ISBLANK(TEXT(DefectCode__c)),
ContainsExternalSolution__c = FALSE,
ISBLANK(TEXT(FaultCode__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Missing Case Completion Details</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MissingContact__c</fullName>
        <description>This formula</description>
        <formula>IF(ISBLANK(Contact__c), TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Missing Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MissingPAorLocationandProduct__c</fullName>
        <formula>ISBLANK(Physical_Asset__c ) &amp;&amp; OR(ISBLANK(AccountLocation__c ), ISBLANK(Product__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Missing PA or Location and Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MissingPAwithFaultConifguration__c</fullName>
        <formula>IF( 
NOT(ISBLANK(FaultConfiguration__c )) &amp;&amp; ISBLANK( Physical_Asset__c), TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Missing PA with Fault Conifguration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MissingSchedulingDetails__c</fullName>
        <formula>IF(
OR(
NOT(ISBLANK(ExecutingEngineer__c )) &amp;&amp; ISBLANK( ActualStartDate__c ),
ISBLANK(ExecutingEngineer__c )) &amp;&amp; NOT(ISBLANK( ActualStartDate__c )), 
TRUE,
FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Missing Scheduling Details</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MissingSubjectAndOrDescription__c</fullName>
        <formula>OR(ContainsDescription__c = FALSE,ISBLANK(Subject__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Missing Subject and/or Description</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MissingWorkOrderType__c</fullName>
        <formula>IF(ISBLANK(TEXT( WorkOrderType__c)), TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Missing Work Order Type</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Missing_Sales_Organization__c</fullName>
        <formula>ISPICKVAL(SalesOrganization__c, &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Missing Sales Organization</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Physical_Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This indicates the machine for which you want to create a case for.</description>
        <label>Physical Asset</label>
        <referenceTo>PhysicalAsset__c</referenceTo>
        <relationshipLabel>Disaster Recovery</relationshipLabel>
        <relationshipName>Disaster_Recovery</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProcessRecord__c</fullName>
        <formula>IF(
OR(WorkOrderRequired__c = TRUE &amp;&amp;
OR(
MissingSubjectAndOrDescription__c = TRUE,
MissingContact__c = TRUE,
MissingPAorLocationandProduct__c = TRUE,
MissingPAwithFaultConifguration__c = TRUE,
MissingSchedulingDetails__c = TRUE, 
MissingWorkOrderType__c = TRUE,
Missing_Sales_Organization__c  = TRUE)
, 
WorkOrderRequired__c = FALSE &amp;&amp;
OR(
MissingSubjectAndOrDescription__c = TRUE,
MissingCaseCompletionDetails__c = TRUE, 
MissingContact__c = TRUE,
MissingPAorLocationandProduct__c = TRUE,
MissingPAwithFaultConifguration__c = TRUE,
MissingWorkOrderType__c = TRUE,
Missing_Sales_Organization__c  = TRUE)),
FALSE, TRUE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Process Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProductID__c</fullName>
        <formula>IF(NOT(ISBLANK( Physical_Asset__c )), Physical_Asset__r.Product__c,  Product__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductIDfromFaultConfiguration__c</fullName>
        <formula>FaultConfiguration__r.Product__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product ID from Fault Configuration</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This indicates the product for which the case was logged.</description>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Disaster Recovery</relationshipLabel>
        <relationshipName>Disaster_Recovery</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RegistrationDate__c</fullName>
        <description>This indicates the date/time when the record was created.</description>
        <label>Registration Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>RequestorEmail__c</fullName>
        <description>This indicates the email of the person who requested the case in name of the contact assigned to the case.</description>
        <label>Requestor Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>RequestorName__c</fullName>
        <description>This indicates the person who requested the case in name of the contact assigned to the case.</description>
        <label>Requestor Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RequiresCostEstimate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This indicates whether the case required a cost estimate.</description>
        <label>Requires Cost Estimate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ResourceID__c</fullName>
        <formula>ExecutingEngineer__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Resource ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesOrganization__c</fullName>
        <label>Sales Organization</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PKL_SalesOrganization</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <description>This indicates the subject of the case.</description>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TS_Case_Reference__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case Reference</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Disaster Recovery</relationshipLabel>
        <relationshipName>Disaster_Recovery</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TS_Work_Order_Line_Item_Reference__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work Order Line Item Reference</label>
        <referenceTo>WorkOrderLineItem</referenceTo>
        <relationshipLabel>Disaster Recovery</relationshipLabel>
        <relationshipName>Disaster_Recovery</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TS_Work_Order_Reference__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work Order Reference</label>
        <referenceTo>WorkOrder</referenceTo>
        <relationshipLabel>Disaster Recovery</relationshipLabel>
        <relationshipName>Disaster_Recovery</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WorkOrderRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This indicates whether a work order is required.</description>
        <label>Work Order Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WorkOrderStatus__c</fullName>
        <formula>IF(Click__c, 
	&quot;Open&quot;,
	IF(ISBLANK(ExecutingEngineer__c), 
		&quot;Open&quot;, 
		&quot;Scheduled&quot;)
	)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Work Order Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WorkOrderType__c</fullName>
        <description>This indicates the type of order which needs to be created.</description>
        <label>Work Order Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>S10</fullName>
                    <label>Corrective Maintenance</label>
                </value>
                <value>
                    <fullName>S15</fullName>
                    <label>1st Line Corrective Maintenance</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Disaster Recovery</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>TS_Case_Reference__c</columns>
        <columns>TS_Work_Order_Reference__c</columns>
        <columns>TS_Work_Order_Line_Item_Reference__c</columns>
        <columns>Subject__c</columns>
        <columns>ProcessRecord__c</columns>
        <columns>Already_Processed__c</columns>
        <columns>WorkOrderStatus__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Click__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Disaster_Recovery__c.Case</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Unprocessed</fullName>
        <columns>NAME</columns>
        <columns>ProcessRecord__c</columns>
        <columns>Customer_Case_ID__c</columns>
        <columns>Description__c</columns>
        <columns>TS_Case_Reference__c</columns>
        <columns>TS_Work_Order_Line_Item_Reference__c</columns>
        <columns>AccountLocationID__c</columns>
        <columns>WorkOrderType__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Already_Processed__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Disaster_Recovery__c.Case</value>
        </filters>
        <label>Unprocessed</label>
    </listViews>
    <nameField>
        <displayFormat>DR-{0}</displayFormat>
        <label>Disaster Recovery Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Disaster Recovery</pluralLabel>
    <recordTypes>
        <fullName>Case</fullName>
        <active>true</active>
        <description>This record type is used to generate cases and work orders where required.</description>
        <label>Case</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>